--- a/trunk/build.properties
+++ b/trunk/build.properties
@@ -2,4 +2,9 @@ source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
-               .
+               .,\
+               lib/mac/prefuse.jar,\
+               lib/mac/antlr-3.3-complete.jar,\
+               lib/mac/BNGParser.jar,\
+               lib/mac/jdom.jar,\
+               lib/mac/junit.jar
