--- a/trunk/plugin.xml
+++ b/trunk/plugin.xml
@@ -82,15 +82,6 @@
                relative="org.eclipse.ui.editorss"
                visible="true">
          </view>
-         <view
-               closeable="true"
-               id="rulebender.views.PrefuseTestView"
-               minimized="false"
-               moveable="true"
-               relationship="stack"
-               relative="rulebender.views.contactmap.ContactMapView"
-               visible="true">
-         </view>
       </perspectiveExtension>
    </extension>
    <extension
@@ -299,7 +290,7 @@
             class="rulebender.editors.simple.SimpleEditor"
             contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
             default="true"
-            extensions="txt, bngl"
+            extensions="txt"
             id="rulebender.editors.simple"
             name="Simple Editor">
       </editor>
@@ -307,6 +298,7 @@
             class="rulebender.editors.bngl.BNGLEditor"
             contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
             default="false"
+            extensions="bngl"
             id="rulebender.editors.bngl"
             name="BNGL Editor">
       </editor>
